fixed the search spacing for the icon and the space between the movie cards when you hover over it

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,6 +23,16 @@ select {
   margin: 15px 0;
 }
 
+.cardSpacing{
+  margin-top: 10px;
+}
+
+label {
+  &.label-icon{
+    margin-top: -10px;
+  }
+}
+
 //navbar
 
 div {
